@@ -11,4 +11,6 @@ set env TERM xterm
 #set args --restore /tmp/q ./foobar
 #set args -O info
 
-set args --restore $ttests/drib.isearch
+#set args --restore $ttests/drib.isearch
+#set env INFOPATH /usr/share/info
+set args ./imagetxt
