@@ -1,3 +1,9 @@
+2013-02-10  Karl Berry  <karl@gnu.org>
+
+	* info/tag.c (tag_found_keyword): new fn, including a check
+	for the text buffer being realloc-ed, invalidating kw.  Sigh.
+	(tag_image): call it (twice).
+
 2013-02-10  Patrice Dumas  <pertusus@free.fr>
 
 	* autogen.sh, tp/maintain/regenerate_cmd_tests.sh, tp/tests/*:
